# python-license

./: .licenseignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  NOTICE  README.md  license.py  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/workflows/: publish.yml  test.yml
python_license/: __init__.py  __main__.py  cli.py  comment_styles.py  constants.py  file_utils.py  header.py  ignore.py
tests/: __init__.py  test_cli.py  test_comment_styles.py  test_constants.py  test_file_utils.py  test_header.py  test_ignore.py
