[project]
name = "python-license"
version = "0.1.0"
description = "Automatically adds or updates SPDX license and copyright headers in source files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = []
urls = { "Homepage" = "https://github.com/eznix86/python-license" }
keywords = ["license", "spdx", "copyright", "headers", "source-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators"
]

[project.scripts]
license = "license:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["license.py"]
